--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,13 @@
           <td><input type="text" value="0.001" id="dt" /></td>
         </tr>
         <tr>
+          <td><label for="showGBest">
+              <input type="checkbox" id="showGBest" checked />
+              Mostrar gBest?
+              </label>
+            </td>
+        </tr>
+        <tr>
           <td><label for="showTrace">
               <input type="checkbox" id="showTrace" />
               Traçar?
