implement start button

--- a/public/index.html
+++ b/public/index.html
@@ -52,10 +52,10 @@
         </tr>
         <tr>
           <td>
-            <button id="step">Passo</button>
+            <button id="stepButton">Passo</button>
           </td>
           <td>
-          <button id="start-stop">Start</button>
+          <button id="startButton">Start</button>
           </td>
         </tr>
       </table>
