--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
 <body>
     <canvas id="drawing-canvas" width=800 height=600></canvas>
     <div class="control-panel">
+      <h1>
+        V<sub>x</sub> = k &times V<sub>x</sub> +
+        c<sub>1</sub> &times rand() &times (gBest<sub>x</sub> - P<sub>x</sub>)
+        c<sub>2</sub> &times rand() &times (pBest<sub>x</sub>
+        - P<sub>x</sub>)
+        <hr>
+        P<sub>x</sub> = P<sub>x</sub> + V<sub>x</sub> &times dt
+      </h1>
       <table>
         <tr>
           <td>Número de Partículas:</td>
