--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <h1>
         V<sub>x</sub> = k &times V<sub>x</sub> +
         c<sub>1</sub> &times rand() &times (gBest<sub>x</sub> - P<sub>x</sub>)
-        c<sub>2</sub> &times rand() &times (pBest<sub>x</sub>
+         + c<sub>2</sub> &times rand() &times (pBest<sub>x</sub>
         - P<sub>x</sub>)
         <hr>
         P<sub>x</sub> = P<sub>x</sub> + V<sub>x</sub> &times dt
