can change maxIterations

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,10 @@
           <td><input type="text" value="0.01" id="dt" /></td>
         </tr>
         <tr>
+          <td>Max. iterações:</td>
+          <td><input type="text" value="100" id="maxIterations" /></td>
+        </tr>
+        <tr>
           <td><label for="showGBest">
               <input type="checkbox" id="showGBest" checked />
               Mostrar gBest?
