--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,9 @@
       <p id="output"></p>
 
     </div>
+    <div class="image-link">
+      <a href="images/sombrero-plot.png">Ver plot da função</a>
+    </div>
     <script src="javascripts/app.js"></script>
 </body>
 </html>
