--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
               <button id="stepButton">Passo</button>
             </td>
             <td>
-            <button id="startButton">Start</button>
+            <button id="runButton">Rodar</button>
             </td>
           </tr>
         </table>
