--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,13 @@
               </td>
           </tr>
           <tr>
+            <td><label for="showPBest">
+                <input type="checkbox" id="showPBest" />
+                Mostrar pBest?
+                </label>
+              </td>
+          </tr>
+          <tr>
             <td><label for="showTrace">
                 <input type="checkbox" id="showTrace" />
                 Traçar?
