link pso example from index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-public/index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>PSO - Sombrero Mexicano</title>
+    <link rel="stylesheet" href="stylesheets/base.css">
+</head>
+<body>
+
+  <a href="public/index.html">Particle Swarm Optimization example</a>
+
+</body>
+</html>
