improve index page

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="stylesheets/base.css">
 </head>
 <body>
+  <div>
+    <header>
+      <h1>Exemplo de Otimização por Enxame de Partículas (PSO)</h1>
+      <h2>Otimização da função f(x) = 6*cos(sqrt(x^2 + y^2))/(x^2 + y^2 + 6)
+      <a href="images/sombrero-plot.png">Ver plot da função</a></h2>
+    </header>
+  </div>
     <canvas id="drawing-canvas" width=800 height=600></canvas>
     <div class="sidebar">
       <div class="control-panel">
@@ -84,9 +91,6 @@
 
       <p id="output"></p>
 
-    </div>
-    <div class="image-link">
-      <a href="images/sombrero-plot.png">Ver plot da função</a>
     </div>
     <script src="javascripts/app.js"></script>
 </body>
